--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,4 @@ jobs:
 
       - run: go version
       - run: go test ./...
-      - run: go test -race -coverprofile=./coverage.out -covermode=atomic ./...
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - run: go test -race ./...
